--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,16 +1,3 @@
-{{- /*
-
-- TODO add documentation of settings under site.Params.dnb.head
-- TODO add documentation of hooks
-- TODO research license <link rel="license" href="copyright.html">
-- TODO research links the archive (<link rel="archives" href="https://example.com/archives/">)
-- TODO research links to top level resource in an hierarchical structure (<link rel="index" href="https://example.com/article/">)
-- TODO research EditURI (<link rel="EditURI" href="https://example.com/xmlrpc.php?rsd" type="application/rsd+xml" title="RSD">)
-- TODO research pingback (<link rel="pingback" href="https://example.com/xmlrpc.php">)
-- TODO research webmention (<link rel="webmention" href="https://example.com/webmention">)
-- TODO research micropub (<link rel="micropub" href="https://example.com/micropub">)
-
-*/ -}}
 {{- partial "func/hook.html" ( dict "hook" "head-init" "context" . ) -}}
 <meta charset="{{- site.Params.dnb.head.charset | default "utf-8" -}}">
 <meta name="viewport" content="{{- site.Params.dnb.head.viewport | default "width=device-width, initial-scale=1" -}}">
@@ -26,14 +13,11 @@
 {{- partial "head/translations.html" . -}}
 {{- partial "head/seo.html" . -}}
 {{- partial "head/series.html" . -}}
-{{- partial "head/social-graph.html" . -}}
-{{- $partialPath := "head/opensearch.html" -}}
-{{- if templates.Exists ( printf "partials/%s" $partialPath ) -}}
-  {{- partialCached $partialPath . -}}
-{{- end -}}
-{{- $partialPath := "head/pwa.html" -}}
-{{- if templates.Exists ( printf "partials/%s" $partialPath ) -}}
-  {{- partialCached $partialPath . -}}
+{{- $paths := slice "head/social.html" "head/opensearch.html" "head/pwa.html" -}}
+{{- range $paths -}}
+  {{- if templates.Exists ( printf "partials/%s" . ) -}}
+    {{- partialCached . . -}}
+  {{- end -}}
 {{- end -}}
 {{- partialCached "head/verification.html" . -}}
 {{- partialCached "head/alternates.html" . -}}
