docs: update translations for the head

--- a/layouts/partials/head/translations.html
+++ b/layouts/partials/head/translations.html
@@ -1,1 +1,5 @@
-{{/* <link rel="alternate" href="https://es.example.com/" hreflang="es"> */}}
+{{- if .IsTranslated -}}
+  {{- range .Translations -}}
+    <link rel="alternate" href="{{- .Permalink -}}" hreflang="{{- .Lang -}}" title="{{- .Title -}}">
+  {{- end -}}
+{{- end -}}
