--- a/layouts/partials/head/author.html
+++ b/layouts/partials/head/author.html
@@ -1,11 +1,11 @@
-{{- /* TODO documentation of how author is built */ -}}
-{{/*
-<meta name="author" content="{{ site.Params.author }}">
-
-<!-- Provides information about an author or another person -->
-<link rel="me" href="https://google.com/profiles/thenextweb" type="text/html">
-<link rel="me" href="mailto:name@example.com">
-<link rel="me" href="sms:+15035550125">
-
-<!-- Links to information about the author(s) of the document -->
-<link rel="author" href="humans.txt"> */}}
+{{- with site.Author -}}
+  {{- with .name -}}
+    <meta name="author" content="{{- . -}}">
+  {{- end -}}
+  {{- with .email }}
+    <link rel="me" href="mailto:{{- . -}}">
+  {{- end -}}
+  {{- with .homepage -}}
+    <link rel="me" href="{{- . -}}" type="text/html">
+  {{- end -}}
+{{- end -}}
