fix: rework the way the current page number is established
see README.md for details

--- a/layouts/partials/head/title.html
+++ b/layouts/partials/head/title.html
@@ -13,8 +13,11 @@
 {{- end -}}
 
 {{- if .IsNode -}}
-  {{- if gt .Paginator.PageNumber 1 -}}
-    {{- $title = printf "%s (Page %d)" $title .Paginator.PageNumber -}}
+  {{- $paginator := .Scratch.Get "paginator" -}}
+  {{- with $paginator -}}
+    {{- if gt .PageNumber 1 -}}
+      {{- $title = printf "%s (Page %d)" $title .PageNumber -}}
+    {{- end -}}
   {{- end -}}
 {{- end -}}
 
