--- a/layouts/partials/head/seo.html
+++ b/layouts/partials/head/seo.html
@@ -1,7 +1,7 @@
 {{/* <!-- Helps prevent duplicate content issues -->
 <link rel="canonical" href="https://example.com/article/?page=2">
 
-<!-- Control the behavior of search engine crawling and indexing -->
+<!-- Control the behaviour of search engine crawling and indexing -->
 <meta name="robots" content="index,follow"><!-- All Search Engines -->
 <meta name="googlebot" content="index,follow"><!-- Google Specific -->
 
