--- a/layouts/partials/head/translations.html
+++ b/layouts/partials/head/translations.html
@@ -1,5 +1,5 @@
-{{- if .IsTranslated -}}
+{{ if .IsTranslated -}}
   {{- range .Translations -}}
-    <link rel="alternate" href="{{- .Permalink -}}" hreflang="{{- .Lang -}}" title="{{- .Title -}}">
-  {{- end -}}
-{{- end -}}
+    <link rel="alternate" href="{{- .Permalink -}}" hreflang="{{- .Lang -}}"{{ with .Title }} title="{{- . -}}"{{ end }}>
+  {{- end }}
+{{ end -}}
