--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,4 +1,6 @@
-{{- $styles := resources.Get "scss/style.scss" -}}
+{{- $config := site.Params.dnb.head.styles -}}
+{{- $entrypoint := $config.entrypoint | default "scss/style.scss" -}}
+{{- $styles := resources.Get $entrypoint -}}
 {{- $styles = $styles | resources.ToCSS -}}
 {{- $styles = $styles | minify | fingerprint "sha512" -}}
 <link rel="stylesheet" media="all" integrity="{{- $styles.Data.Integrity -}}" href="{{- $styles.Permalink -}}">
