--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,6 +1,7 @@
+{{- $opts := dict -}}
 {{- $config := site.Params.dnb.head.styles -}}
 {{- $entrypoint := $config.entrypoint | default "scss/style.scss" -}}
 {{- $styles := resources.Get $entrypoint -}}
-{{- $styles = $styles | resources.ToCSS -}}
+{{- $styles = $styles | resources.ToCSS $opts -}}
 {{- $styles = $styles | minify | fingerprint "sha512" -}}
 <link rel="stylesheet" media="all" integrity="{{- $styles.Data.Integrity -}}" href="{{- $styles.Permalink -}}">
