fix: remove language from rss feed, add canonical link

--- a/layouts/partials/head/alternates.html
+++ b/layouts/partials/head/alternates.html
@@ -2,8 +2,10 @@
   {{- range . -}}
   <link
     rel="{{- .Rel -}}"
-    type="{{- .MediaType.Type -}}"
+    type="{{- .MediaType.Type | safeHTMLAttr -}}"
     href="{{- .Permalink | safeURL -}}"
-    hreflang="{{- site.LanguageCode -}}">
+
+    {{/* hreflang="{{- site.LanguageCode -}}" */}}
+    >
   {{- end -}}
 {{- end -}}
