--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -3,5 +3,6 @@
 {{- $entrypoint := $config.entrypoint | default "scss/style.scss" -}}
 {{- $styles := resources.Get $entrypoint -}}
 {{- $styles = $styles | resources.ToCSS $opts -}}
-{{- $styles = $styles | minify | fingerprint "sha512" -}}
+{{- $styles = $styles | resources.PostCSS -}}
+{{- $styles = $styles | minify | fingerprint "sha512" | resources.PostProcess -}}
 <link rel="stylesheet" media="all" integrity="{{- $styles.Data.Integrity -}}" href="{{- $styles.Permalink -}}">
