feat: add options for style compilation

--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,4 +1,4 @@
-{{- $opts := dict -}}
+{{- $opts := site.Params.dnb.head.styles.options }}
 {{- $config := site.Params.dnb.head.styles -}}
 {{- $entrypoint := $config.entrypoint | default "scss/style.scss" -}}
 {{- $styles := resources.Get $entrypoint -}}
