--- a/layouts/partials/head/style.html
+++ b/layouts/partials/head/style.html
@@ -1,10 +1,23 @@
+{{- partial "func/hook.html" ( dict
+	"hook" "head-styles-before"
+	"context" .
+) -}}
 {{- $config := site.Params.dnb.head.styles -}}
-{{- if ne "internal" ($config.method | default "postcss") -}}
-	{{- $entrypoint := $config.entrypoint | default "scss/style.scss" -}}
-	{{- $styles := resources.Get $entrypoint -}}
-	{{- $styles = $styles | resources.ToCSS $config.options -}}
-	{{- $styles = $styles | resources.PostCSS -}}
-	{{- $styles = $styles | minify | fingerprint "sha512" | resources.PostProcess -}}
-	<link rel="stylesheet" media="all" integrity="{{- $styles.Data.Integrity -}}" href="{{- $styles.Permalink -}}">
+{{- if eq "postcss" ($config.method | default "postcss") -}}
+  {{- $entrypoint := $config.entrypoint | default "scss/style.scss" -}}
+  {{- $styles := resources.Get $entrypoint -}}
+  {{- $styles = $styles | resources.ToCSS $config.options -}}
+  {{- $styles = $styles | resources.PostCSS -}}
+  {{- $styles = $styles | minify -}}
+  {{- $styles = $styles | fingerprint "sha512" -}}
+  {{- $styles = $styles | resources.PostProcess -}}
+  <link
+    rel="stylesheet"
+    media="all"
+    integrity="{{- $styles.Data.Integrity -}}"
+    href="{{- $styles.Permalink -}}" />
 {{- end -}}
-{{- partial "func/hook.html" ( dict "hook" "head-styles-after" "context" . ) -}}
+{{- partial "func/hook.html" ( dict
+	"hook" "head-styles-after"
+	"context" .
+) -}}
