fix: no canonical link for 404 pages

--- a/layouts/partials/head/seo.html
+++ b/layouts/partials/head/seo.html
@@ -2,6 +2,7 @@
 <meta name="robots" content="{{ . }}">
 {{- else -}}
 <meta name="robots" content="index,follow">
-{{- end -}} {{- if (eq (.Params.canonical | default true) true) -}}
+{{- end -}} {{ if ne .Page.Kind "404" }}
+{{- /* TODO: add function partial to check if canonical is required */ -}}
 <link rel="canonical" href="{{ .Permalink }}">
 {{- end -}}
