feat: section title via sectiontitle frontmatter

--- a/layouts/partials/head/title.html
+++ b/layouts/partials/head/title.html
@@ -21,6 +21,12 @@
 {{- end -}}
 {{- end -}}
 
+{{- if isset .Params "sectiontitle" -}}
+  {{- with .Params.sectiontitle -}}
+    {{- $title = printf "%s %s %s" $title $separator . -}}
+  {{- end -}}
+{{- end -}}
+
 {{- if eq $sitetitle true -}}
 {{- $title = printf "%s %s %s" $title $separator site.Title -}}
 {{- end -}}
