theme(fix): remove more whitespaces

--- a/layouts/partials/head/author.html
+++ b/layouts/partials/head/author.html
@@ -2,7 +2,7 @@
   {{- with .name -}}
     <meta name="author" content="{{- . -}}">
   {{- end -}}
-  {{- with .email }}
+  {{- with .email -}}
     <link rel="me" href="mailto:{{- . -}}">
   {{- end -}}
   {{- with .homepage -}}
