--- a/layouts/partials/head/alternates.html
+++ b/layouts/partials/head/alternates.html
@@ -2,8 +2,8 @@
   {{- range . -}}
   <link
     rel="{{- .Rel -}}"
-    {{ printf "type=%q" .MediaType.Type | safeHTMLAttr }}
-    {{ printf "href=%q" .Permalink | safeHTMLAttr }}
+    {{- printf "type=%q" .MediaType.Type | safeHTMLAttr -}}
+    {{- printf "href=%q" .Permalink | safeHTMLAttr -}}
     >
   {{- end -}}
 {{- end -}}
