--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,3 +1,4 @@
+{{- /* TODO add hooks to documentation */ -}}
 {{- $page := . -}}
 {{- partial "func/hook.html" ( dict "hook" "head-init" "context" . ) -}}
 <meta charset="{{- site.Params.dnb.head.charset | default "utf-8" -}}">
@@ -5,22 +6,31 @@
 {{- partial "head/title.html" . -}}
 {{- partial "func/hook.html" ( dict "hook" "head-start" "context" . ) -}}
 {{- partialCached "head/speed-optimisation.html" . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-speed-optimisation" "context" . ) -}}
 <base href="{{- site.BaseURL -}}">
 {{- partial "head/description.html" . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-description" "context" . ) -}}
 {{- partial "head/author.html" . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-author" "context" . ) -}}
 {{- partial "func/hook.html" ( dict "hook" "head-pre-css" "context" . ) -}}
 {{- partialCached "head/style.html" . -}}
 {{- partial "func/hook.html" ( dict "hook" "head-post-css" "context" . ) -}}
 {{- partial "head/translations.html" . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-translations" "context" . ) -}}
 {{- partial "head/seo.html" . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-seo" "context" . ) -}}
 {{- partialCached "head/series.html" . . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-series" "context" . ) -}}
 {{- $paths := slice "head/social.html" "head/opensearch.html" "head/pwa.html" "head/humans.txt" -}}
 {{- range $paths -}}
   {{- if templates.Exists ( printf "partials/%s" . ) -}}
     {{- partialCached . $page $page -}}
+    {{- partial "func/hook.html" ( dict "hook" (printf "head-post-%s" .) "context" . ) -}}
   {{- end -}}
 {{- end -}}
 {{- partialCached "head/verification.html" . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-verification" "context" . ) -}}
 {{- partialCached "head/alternates.html" . "sitefeeds" -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-alternates" "context" . ) -}}
 {{- partial "head/others.html" . -}}
 {{- partial "func/hook.html" ( dict "hook" "head-end" "context" . ) -}}
