fix: change order of head tags and remove notes

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,5 @@
-{{- /* TODO add hooks to documentation */ -}}
 {{- $page := . -}}
+{{- $config := site.Params.dnb.head -}}
 {{- partial "func/hook.html" ( dict "hook" "head-init" "context" . ) -}}
 <meta charset="{{- site.Params.dnb.head.charset | default "utf-8" -}}">
 <meta name="viewport" content="{{- site.Params.dnb.head.viewport | default "width=device-width, initial-scale=1" -}}">
@@ -7,7 +7,9 @@
 {{- partial "func/hook.html" ( dict "hook" "head-start" "context" . ) -}}
 {{- partialCached "head/speed-optimisation.html" . -}}
 {{- partial "func/hook.html" ( dict "hook" "head-post-speed-optimisation" "context" . ) -}}
+{{- if and (isset $config "nobase") (eq false $config.nobase) -}}
 <base href="{{- site.BaseURL -}}">
+{{- end -}}
 {{- partial "head/description.html" . -}}
 {{- partial "func/hook.html" ( dict "hook" "head-post-description" "context" . ) -}}
 {{- partial "head/author.html" . -}}
@@ -28,9 +30,9 @@
     {{- partial "func/hook.html" ( dict "hook" (printf "head-post-%s" .) "context" . ) -}}
   {{- end -}}
 {{- end -}}
-{{- partialCached "head/verification.html" . -}}
-{{- partial "func/hook.html" ( dict "hook" "head-post-verification" "context" . ) -}}
 {{- partialCached "head/alternates.html" . "sitefeeds" -}}
 {{- partial "func/hook.html" ( dict "hook" "head-post-alternates" "context" . ) -}}
+{{- partialCached "head/verification.html" . -}}
+{{- partial "func/hook.html" ( dict "hook" "head-post-verification" "context" . ) -}}
 {{- partial "head/others.html" . -}}
 {{- partial "func/hook.html" ( dict "hook" "head-end" "context" . ) -}}
