fix: i18n for page-n label in title generation

--- a/layouts/partials/head/title.html
+++ b/layouts/partials/head/title.html
@@ -16,7 +16,8 @@
 {{- $paginator := .Scratch.Get "paginator" -}}
 {{- with $paginator -}}
 {{- if gt .PageNumber 1 -}}
-{{- $title = printf "%s (Page %d)" $title .PageNumber -}}
+{{- $pagenumber := printf (i18n "page-n") .PageNumber -}}
+{{- $title = printf "%s %s" $title $pagenumber -}}
 {{- end -}}
 {{- end -}}
 {{- end -}}
